--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,19 @@ services:
       - $PWD/jenkins_home:/var/jenkins_home
     networks:
       - net
+    git:
+      container_name: git_server
+      hostname: gitlab.example.com 
+      ports: 
+        - "443:443"
+        - "80:80"
+      restart: always
+      volumes: 
+        - "$GITLAB_HOME/config:/etc/gitlab"
+        - "$GITLAB_HOME/logs:/var/log/gitlab"
+        - "$GITLAB_HOME/data:/var/opt/gitlab"
+      image: gitlab/gitlab-ee:latest
+      networks: 
+        - net
 networks:
-  net:
+  net: 
